import { snapshotEverything, makeTestFixture, render, nextTick, elem } from "../helpers";
import { Component, mount, props, proxy, xml } from "../../src";

snapshotEverything();

let fixture: HTMLElement;

beforeEach(() => {
  fixture = makeTestFixture();
});

describe("t-key", () => {
  test("t-key on Component", async () => {
    let childInstance = null;
    class Child extends Component {
      static template = xml`<div t-out="this.props.key"></div>`;
      props = props();

      setup() {
        childInstance = this;
      }
    }

    class Parent extends Component {
      static components = { Child };
      static template = xml`<Child t-key="this.key" key="this.key" />`;

      key = 1;
    }

    const parent = await mount(Parent, fixture);
    expect(fixture.innerHTML).toBe("<div>1</div>");

    const oldChild = childInstance;
    parent.key = 2;
    render(parent);
    await nextTick();
    expect(fixture.innerHTML).toBe("<div>2</div>");
    expect(oldChild === childInstance).toBeFalsy();
  });

  test("t-key change on a component rendering an empty list", async () => {
    class List extends Component {
      static template = xml`
        <t t-foreach="this.props.items" t-as="item" t-key="item_index">
          <t t-out="item"/>
        </t>`;
      props = props();
    }

    class Parent extends Component {
      static components = { List };
      static template = xml`<button>b</button><List t-key="this.key" items="this.items"/><span>end</span>`;

      key = "a";
      get items() {
        return this.key === "a" ? [] : [1, 2];
      }
    }

    const parent = await mount(Parent, fixture);
    expect(fixture.innerHTML).toBe("<button>b</button><span>end</span>");

    // key change while the outgoing component rendered an empty list
    parent.key = "b";
    render(parent);
    await nextTick();
    expect(fixture.innerHTML).toBe("<button>b</button>12<span>end</span>");

    // key change back: outgoing component has content, incoming one is empty
    parent.key = "a";
    render(parent);
    await nextTick();
    expect(fixture.innerHTML).toBe("<button>b</button><span>end</span>");

    // and once more from an empty one, to check the anchor bookkeeping survives
    parent.key = "b";
    render(parent);
    await nextTick();
    expect(fixture.innerHTML).toBe("<button>b</button>12<span>end</span>");
  });

  test("t-key on Component as a function", async () => {
    let childInstance = null;
    class Child extends Component {
      static template = xml`<div t-out="this.props.key"></div>`;
      props = props();

      setup() {
        childInstance = this;
      }
    }

    let keyCalls = 0;
    let __key = 1;
    class Parent extends Component {
      static components = { Child };
      static template = xml`<span><Child t-key="this.key" key="this.key" /></span>`;

      get key() {
        keyCalls++;
        return __key;
      }
    }

    const parent = await mount(Parent, fixture);
    expect(fixture.innerHTML).toBe("<span><div>1</div></span>");
    expect(keyCalls).toBe(2); // one for t-key, the other for the props

    const oldChild = childInstance;
    __key = 2;
    render(parent);
    await nextTick();
    expect(fixture.innerHTML).toBe("<span><div>2</div></span>");
    expect(oldChild === childInstance).toBeFalsy();
    expect(keyCalls).toBe(4);
  });

  test("t-key on multiple Components", async () => {
    const childInstances = [];
    class Child extends Component {
      static template = xml`<div t-out="this.props.key"></div>`;
      props = props();

      setup() {
        childInstances.push(this);
      }
    }

    class Parent extends Component {
      static components = { Child };
      static template = xml`<span>
        <Child t-key="this.key1" key="this.key1" />
        <Child t-key="this.key2" key="this.key2" />
      </span>`;

      key1 = 1;
      key2 = 2;
    }

    const parent = await mount(Parent, fixture);
    expect(elem(parent).innerHTML).toBe("<div>1</div><div>2</div>");

    parent.key1 = 2;
    parent.key2 = 1;
    render(parent);
    await nextTick();
    expect(elem(parent).innerHTML).toBe("<div>2</div><div>1</div>");
    expect(childInstances.length).toBe(4);
  });

  test("t-key on multiple Components with t-call 1", async () => {
    const childInstances = [];
    class Child extends Component {
      static template = xml`<div t-out="this.props.key"></div>`;
      props = props();

      setup() {
        childInstances.push(this);
      }
    }

    class Parent extends Component {
      static components = { Child };
      static template = xml`<span>
        <t t-call="calledTemplate" key="this.key1" />
        <t t-call="calledTemplate" key="this.key2" />
      </span>`;

      key1 = 1;
      key2 = 2;
    }

    const parent = await mount(Parent, fixture, {
      templates: `
        <templates>
          <t t-name="calledTemplate">
            <Child t-key="key" key="key" />
          </t>
        </templates>`,
    });
    expect(elem(parent).innerHTML).toBe("<div>1</div><div>2</div>");

    parent.key1 = 2;
    parent.key2 = 1;
    render(parent);
    await nextTick();
    expect(elem(parent).innerHTML).toBe("<div>2</div><div>1</div>");
    expect(childInstances.length).toBe(4);
  });

  test("t-key on multiple Components with t-call 2", async () => {
    const childInstances = [];
    class Child extends Component {
      static template = xml`<div t-out="this.props.key"></div>`;
      props = props();

      setup() {
        childInstances.push(this);
      }
    }

    class Parent extends Component {
      static components = { Child };
      static template = xml`<span>
        <t t-call="calledTemplate" key1="this.key1" key2="this.key2" />
      </span>`;

      key1 = 1;
      key2 = 2;
    }

    const parent = await mount(Parent, fixture, {
      templates: `
        <templates>
          <t t-name="calledTemplate">
          <Child t-key="key1" key="key1" /><Child t-key="key2" key="key2" />
          </t>
        </templates>`,
    });
    expect(elem(parent).innerHTML).toBe("<div>1</div><div>2</div>");

    parent.key1 = 2;
    parent.key2 = 1;
    render(parent);
    await nextTick();
    expect(elem(parent).innerHTML).toBe("<div>2</div><div>1</div>");
    expect(childInstances.length).toBe(4);
  });

  test("t-foreach with t-key switch component position", async () => {
    const childInstances = [];
    class Child extends Component {
      static template = xml`<div t-out="this.props.key"></div>`;
      props = props();
      setup() {
        childInstances.push(this);
      }
    }

    class Parent extends Component {
      static components = { Child };
      static template = xml`<span>
        <t t-foreach="this.clist" t-as="c" t-key="c">
          <Child key="c + this.key1" t-key="this.key1"/>
        </t>
      </span>`;

      key1 = "key1";
      clist = [1, 2];
    }

    const parent = await mount(Parent, fixture);
    expect(elem(parent).innerHTML).toBe("<div>1key1</div><div>2key1</div>");
    parent.clist = [2, 1];
    render(parent);
    await nextTick();
    expect(elem(parent).innerHTML).toBe("<div>2key1</div><div>1key1</div>");
    expect(childInstances.length).toBe(2);
    childInstances.length = 0;

    parent.clist = [1, 2];
    parent.key1 = "key2";
    render(parent);
    await nextTick();
    expect(elem(parent).innerHTML).toBe("<div>1key2</div><div>2key2</div>");
    expect(childInstances.length).toBe(2);
  });

  test("t-call under a t-key is recreated when the key changes", async () => {
    let n = 0;
    class Cell extends Component {
      static template = xml`<b t-out="this.id"/>`;
      id = ++n;
    }
    class Parent extends Component {
      static template = xml`<t t-key="this.state.k"><t t-call="sub"/></t>`;
      static components = { Cell };
      state = proxy({ k: 1 });
    }
    const parent = await mount(Parent, fixture, {
      templates: `<templates><t t-name="sub"><Cell/></t></templates>`,
    });
    expect(fixture.innerHTML).toBe("<b>1</b>");
    parent.state.k = 2;
    await nextTick();
    expect(fixture.innerHTML).toBe("<b>2</b>");
  });
  test("an object t-key on a component recreates it when it changes", async () => {
    let created = 0;
    class Child extends Component {
      static template = xml`<i>c</i>`;
      setup() {
        created++;
      }
    }
    class Parent extends Component {
      static template = xml`<Child t-key="this.state.k"/>`;
      static components = { Child };
      state = proxy({ k: {} as object });
    }
    const parent = await mount(Parent, fixture);
    expect(created).toBe(1);
    parent.state.k = {};
    await nextTick();
    expect(created).toBe(2);
    expect(fixture.innerHTML).toBe("<i>c</i>");
  });
});
