// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-key > a t-key on the t-call node itself recreates it when the key changes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, zero, withoutZero, callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['this'].state.k);
    return toggler(tKey_1, callTemplate(\`sub\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u0002k\${tKey_1}\\u00021\`));
  }
}"
`;

exports[`t-key > a t-key on the t-call node itself recreates it when the key changes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Cell\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`t-key > a t-key on the t-call node itself recreates it when the key changes 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].id, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > an array t-key is its string form: a new array of the same items keeps the component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["n"]);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf([ctx['this'].state.a,'b']);
    return toggler(tKey_1, comp1({n: ctx['this'].state.n}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, null));
  }
}"
`;

exports[`t-key > an array t-key is its string form: a new array of the same items keeps the component 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<i><block-child-0/></i>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.n, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > an object key never shares a component with a string key 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf, OwlError } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["v"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);
    const keys1 = new Set();
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'];
      const skey1 = keyOf(key1);
      if (keys1.has(skey1)) { throw new OwlError(\`Got duplicate key in t-foreach: \${key1}\`)}
      keys1.add(skey1);
      const props1 = {v: typeof ctx['item']};
      c_block1[i1] = withKey(comp1(props1, key + \`\\u00021\\u0002:\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`t-key > an object key never shares a component with a string key 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<i><block-child-0/></i>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > an object t-key on a component recreates it when it changes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['this'].state.k);
    return toggler(tKey_1, comp1({}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, null));
  }
}"
`;

exports[`t-key > an object t-key on a component recreates it when it changes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<i>c</i>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-key > symbol keys are told apart by identity 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf, OwlError } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["v"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);
    const keys1 = new Set();
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'].k;
      const skey1 = keyOf(key1);
      if (keys1.has(skey1)) { throw new OwlError(\`Got duplicate key in t-foreach: \${key1}\`)}
      keys1.add(skey1);
      const props1 = {v: ctx['item'].v};
      c_block1[i1] = withKey(comp1(props1, key + \`\\u00021\\u0002:\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`t-key > symbol keys are told apart by identity 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<i><block-child-0/></i>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-call under a t-key is recreated when the key changes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, zero, withoutZero, callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['this'].state.k);
    return toggler(tKey_1, callTemplate(\`sub\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u0002k\${tKey_1}\\u00021\`));
  }
}"
`;

exports[`t-key > t-call under a t-key is recreated when the key changes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Cell\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`t-key > t-call under a t-key is recreated when the key changes 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].id, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-foreach with t-key switch component position 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, keyOf, createComponent, withKey } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["key"]);
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].clist);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["c"] = k_block2[i1];
      const key1 = ctx['c'];
      const skey1 = keyOf(key1);
      const tKey_1 = keyOf(ctx['this'].key1);
      c_block2[i1] = withKey(comp1({key: ctx['c']+ctx['this'].key1}, key + \`\\u0002k\${tKey_1}\\u00021\\u0002:\${skey1}\`, node, this, null), \`\${skey1}\\u0002k\${tKey_1}\`);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-foreach with t-key switch component position 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.key, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-key change on a component rendering an empty list 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, \`List\`, true, false, false, ["items"]);
  
  let block2 = createBlock(\`<button>b</button>\`);
  let block4 = createBlock(\`<span>end</span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = block2();
    const tKey_1 = keyOf(ctx['this'].key);
    const b3 = toggler(tKey_1, comp1({items: ctx['this'].items}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, null));
    const b4 = block4();
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`t-key > t-key change on a component rendering an empty list 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, safeOutput, withKey } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].props.items);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      ctx["item_index"] = i1;
      const key1 = ctx['item_index'];
      c_block1[i1] = withKey(safeOutput(ctx['item'], node, key, "\\u00021", 1, key1), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`t-key > t-key on Component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["key"]);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['this'].key);
    return toggler(tKey_1, comp1({key: ctx['this'].key}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, null));
  }
}"
`;

exports[`t-key > t-key on Component 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.key, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-key on Component as a function 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["key"]);
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['this'].key);
    const b2 = toggler(tKey_1, comp1({key: ctx['this'].key}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, null));
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-key on Component as a function 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.key, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-key on multiple Components 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["key"]);
  const comp2 = createComponent(app, \`Child\`, true, false, false, ["key"]);
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['this'].key1);
    const b2 = toggler(tKey_1, comp1({key: ctx['this'].key1}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, null));
    const tKey_2 = keyOf(ctx['this'].key2);
    const b3 = toggler(tKey_2, comp2({key: ctx['this'].key2}, key + \`\\u0002k\${tKey_2}\\u00022\`, node, this, null));
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-key > t-key on multiple Components 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.key, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-key on multiple Components with t-call 1 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["key"] = ctx['this'].key1;
    ctx1[zero] = null;
    const b2 = callTemplate(\`calledTemplate\`, this, app, ctx1, node, key + \`\\u00021\`);
    const ctx2 = Object.create(ctx);
    ctx2["key"] = ctx['this'].key2;
    ctx2[zero] = null;
    const b3 = callTemplate(\`calledTemplate\`, this, app, ctx2, node, key + \`\\u00022\`);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-key > t-key on multiple Components with t-call 1 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["key"]);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['key']);
    return toggler(tKey_1, comp1({key: ctx['key']}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, null));
  }
}"
`;

exports[`t-key > t-key on multiple Components with t-call 1 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.key, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-key on multiple Components with t-call 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["key1"] = ctx['this'].key1;
    ctx1["key2"] = ctx['this'].key2;
    ctx1[zero] = null;
    const b2 = callTemplate(\`calledTemplate\`, this, app, ctx1, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-key > t-key on multiple Components with t-call 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["key"]);
  const comp2 = createComponent(app, \`Child\`, true, false, false, ["key"]);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['key1']);
    const b2 = toggler(tKey_1, comp1({key: ctx['key1']}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, null));
    const tKey_2 = keyOf(ctx['key2']);
    const b3 = toggler(tKey_2, comp2({key: ctx['key2']}, key + \`\\u0002k\${tKey_2}\\u00022\`, node, this, null));
    return multi([b2, b3]);
  }
}"
`;

exports[`t-key > t-key on multiple Components with t-call 2 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.key, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;
